--- a/templates/index.html
+++ b/templates/index.html
@@ -8,24 +8,24 @@
     <meta name="keywords" content="HTML,CSS,JavaScript">
     <title>RecipeScrapper | Juan Hernández</title>
     <link rel="icon" href="../static/imagenes/favicon.svg" type="image/x-icon">
-    <!-- Links para CSS local y AOS -->
+    <!-- Links para CSS local -->
     <link rel="stylesheet" href="{{ url_for('static', filename='css/style.css') }}">
 </head>
 <body>
     <!-- Header -->
-    <header class="header" data-aos="fade-down">
+    <header class="header">
         <div class="container">
             <h1>RecipeScrapper</h1>
             <nav class="nav">
                 <a href="#">Inicio</a>
-                <a href="#">Sobre Nosotros</a>
+                <a href="#">Sobre Mi</a>
                 <a href="#">Contacto</a>
             </nav>
         </div>
     </header>
 
     <!-- Main Content -->
-    <main class="container" data-aos="fade-up">
+    <main class="container">
         <h2>Buscar Recetas</h2>
         <form method="POST" action="/">
             <input type="text" name="ingrediente" placeholder="Introduce un ingrediente" required>
@@ -34,28 +34,32 @@
         
         <section>
             <h3>Recetas de ABC.es</h3>
-            <ul>
+            <div class="grid">
                 {% for receta in recetas_abc %}
-                    <li><a href="{{ receta.url }}" target="_blank">{{ receta.titulo }}</a></li>
+                    <div class="card">
+                        <img src="{{ receta.imagen }}" alt="{{ receta.titulo }}">
+                        <a href="{{ receta.url }}" target="_blank">{{ receta.titulo }}</a>
+                    </div>
                 {% endfor %}
-            </ul>
+            </div>
         </section>
         
         <section>
             <h3>Recetas de Cocinatis</h3>
-            <ul>
+            <div class="grid">
                 {% for receta in recetas_cocinatis %}
-                    <li><a href="{{ receta.url }}" target="_blank">{{ receta.titulo }}</a></li>
+                    <div class="card">
+                        <img src="{{ receta.imagen }}" alt="{{ receta.titulo }}">
+                        <a href="{{ receta.url }}" target="_blank">{{ receta.titulo }}</a>
+                    </div>
                 {% endfor %}
-            </ul>
+            </div>
         </section>
     </main>
 
     <!-- Footer -->
-    <footer class="footer" data-aos="fade-up">
+    <footer class="footer">
         <p>&copy; 2024 Juan Hernández Sánchez-Agesta. Todos los derechos reservados.</p>
     </footer>
-
-    <!-- Scripts -->
 </body>
 </html>
